Fix Safari on MacOS Tahoe

--- a/browsersupport.html
+++ b/browsersupport.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <head>
   <title>Browser Support</title>
   <style>
@@ -73,7 +73,7 @@
         <img src="./img/msedge.png" />
       </th>
       <th>
-        <img src="./img/safari.png" />
+        <img src="./img/webkit.png" />
       </th>
       <th>
         <img src="./img/firefox.png" />
